# Codecomprehender

./: .env.exmaple  .gitignore  README.md  pyproject.toml  run_tests.py
doc/img/: kitchensink_analysis.json
scripts/: generate_parser.sh
src/: cli.py
src/models/: architecture_models.py  parser_models.py
src/parsers/: architecture_parser.py  java_parser.py
src/parsers/listeners/: __init__.py  architecture_listeners.py  java_listener.py
src/parsers/models/: java_class.py  relationship.py
src/prompts/: documentation_system_prompts.py
src/schemas/: documentation_schema.py
src/services/: architecture_analysis_service.py  code_documentation_service.py  documentation_inserter.py  graph_generator.py  llm_service.py
tests/: conftest.py
tests/fixtures/complex_java_project/src/main/java/com/example/: MainApplication.java
tests/fixtures/complex_java_project/src/test/java/: MainApplicationTest.java
tests/fixtures/example_java_project/: Calculator.java  OrderManager.java  UserService.java
tests/integration/: test_cli_documentation.py
